src/objects/sked_Object_Mapping_Dictionary__c.object
<CustomObject>
    <fields>
        <fullName>sked_Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Mapping_To_Object__c</fullName>
        <label>Mapping To Object</label>
        <referenceTo>sked_Object_Mapping__c</referenceTo>
        <relationshipLabel>Object Mapping Dictionary</relationshipLabel>
        <relationshipName>sked_Object_Mapping_Dictionary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Object Mapping Dictionary</label>
    <nameField>
        <displayFormat>OMD-{0000}</displayFormat>
        <label>Object Mapping Dictionary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Mapping Dictionary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>